# samsung-remote-to-controller

./: README.md  create_gadget.py  pyproject.toml  test_gadget.py  testest.py
remote_to_controller/: check_gadget.py  check_uinput.py  config.py  console.py  device.py  input_capabilities.py  main.py  mapping.py  models.py  usb_gadget.py
remote_to_controller/mappings/: Smart_Control_2016.yaml
usb_device/: README.md  __init__.py  descriptor.py  usb_gadget.py
usb_device/models/: __init__.py  descriptor_enums.py  descriptor_usage_page.py  gadget_models.py
